// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config should load multiple hosts 1`] = `
Config {
  "CACHE": false,
  "DEFAULTS": Object {
    "HEADERS": Object {
      "hello": "mars",
    },
  },
  "ENDPOINT": "http://example.org",
  "ENVIRONMENT": Object {},
  "HOSTS": Array [
    Object {
      "GET /e2": "e2",
      "GET /posts": "posts",
      "defaults": Object {
        "HEADERS": Object {
          "hello": "world",
          "world": "hello",
        },
      },
      "endpoint": "http://example.com",
      "host": "com",
    },
    Object {
      "GET /e3": "e3",
      "GET /posts": "posts",
      "defaults": Object {
        "HEADERS": Object {
          "hello": "world",
          "world": "bye",
        },
      },
      "endpoint": "http://example.net",
      "host": "net",
    },
    Object {
      "GET /posts": "posts",
      "endpoint": "http://example.info",
      "host": "info",
    },
  ],
  "PLUGINS": Array [],
  "VERSION": 1,
  "configKeys": Array [
    "VERSION",
    "CACHE",
    "ENDPOINT",
    "PLUGINS",
    "DEFAULTS",
    "ENVIRONMENT",
    "HOSTS",
  ],
  "defaultConfigValues": Object {
    "CACHE": false,
    "DEFAULTS": Object {},
    "ENDPOINT": "",
    "ENVIRONMENT": Object {},
    "HOSTS": Array [],
    "PLUGINS": Array [],
    "VERSION": 1,
  },
  "doc": Object {
    "GET /e1": "e1",
    "defaults": Object {
      "HEADERS": Object {
        "hello": "mars",
      },
    },
    "endpoint": "http://example.org",
    "hosts": Array [
      Object {
        "GET /e2": "e2",
        "GET /posts": "posts",
        "defaults": Object {
          "HEADERS": Object {
            "hello": "world",
            "world": "hello",
          },
        },
        "endpoint": "http://example.com",
        "host": "com",
      },
      Object {
        "GET /e3": "e3",
        "GET /posts": "posts",
        "defaults": Object {
          "HEADERS": Object {
            "hello": "world",
            "world": "bye",
          },
        },
        "endpoint": "http://example.net",
        "host": "net",
      },
      Object {
        "GET /posts": "posts",
        "endpoint": "http://example.info",
        "host": "info",
      },
    ],
  },
  "requests": Array [
    Object {
      "ALIAS": "e1",
      "ENDPOINT": "http://example.org",
      "HEADERS": Object {
        "hello": "mars",
      },
      "REQUEST": "GET /e1",
    },
    Object {
      "ALIAS": "com:e2",
      "ENDPOINT": "http://example.com",
      "HEADERS": Object {
        "hello": "world",
        "world": "hello",
      },
      "REQUEST": "GET /e2",
    },
    Object {
      "ALIAS": "com:posts",
      "ENDPOINT": "http://example.com",
      "HEADERS": Object {
        "hello": "world",
        "world": "hello",
      },
      "REQUEST": "GET /posts",
    },
    Object {
      "ALIAS": "net:e3",
      "ENDPOINT": "http://example.net",
      "HEADERS": Object {
        "hello": "world",
        "world": "bye",
      },
      "REQUEST": "GET /e3",
    },
    Object {
      "ALIAS": "net:posts",
      "ENDPOINT": "http://example.net",
      "HEADERS": Object {
        "hello": "world",
        "world": "bye",
      },
      "REQUEST": "GET /posts",
    },
    Object {
      "ALIAS": "info:posts",
      "ENDPOINT": "http://example.info",
      "HEADERS": Object {
        "hello": "mars",
      },
      "REQUEST": "GET /posts",
    },
  ],
}
`;

exports[`Config should set up defaults for all requests 1`] = `
Config {
  "CACHE": false,
  "DEFAULTS": Object {
    "HEADERS": Object {
      "authentication": "hello",
    },
  },
  "ENDPOINT": "http://jsonplaceholder.typicode.com",
  "ENVIRONMENT": Object {},
  "HOSTS": Array [],
  "PLUGINS": Array [],
  "VERSION": 1,
  "configKeys": Array [
    "VERSION",
    "CACHE",
    "ENDPOINT",
    "PLUGINS",
    "DEFAULTS",
    "ENVIRONMENT",
    "HOSTS",
  ],
  "defaultConfigValues": Object {
    "CACHE": false,
    "DEFAULTS": Object {},
    "ENDPOINT": "",
    "ENVIRONMENT": Object {},
    "HOSTS": Array [],
    "PLUGINS": Array [],
    "VERSION": 1,
  },
  "doc": Object {
    "GET /posts/1": "get-post",
    "GET /user": Object {
      "alias": "user",
      "headers": Object {
        "hello": "world",
      },
    },
    "defaults": Object {
      "HEADERS": Object {
        "authentication": "hello",
      },
    },
    "endpoint": "http://jsonplaceholder.typicode.com",
    "version": 1,
  },
  "requests": Array [
    Object {
      "ALIAS": "get-post",
      "ENDPOINT": "http://jsonplaceholder.typicode.com",
      "HEADERS": Object {
        "authentication": "hello",
      },
      "REQUEST": "GET /posts/1",
    },
    Object {
      "ALIAS": "user",
      "ENDPOINT": "http://jsonplaceholder.typicode.com",
      "HEADERS": Object {
        "authentication": "hello",
        "hello": "world",
      },
      "REQUEST": "GET /user",
    },
  ],
}
`;
